infrastructure/k8s/05a-fastapi-deployment-for-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-api-deployment
  labels:
    app: mongo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-api
  template:
    metadata:
      labels:
        app: mongo-api
    spec:
      containers:
        - name: fastapi-container
          image: "docker.io/YOUR_DOCKERHUB_USERNAME/fastapi-mongo-crud:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
