infrastructure/k8s/04a-mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-headless-service
  labels:
    app: mongo-db
spec:
  clusterIP: None
  selector:
    app: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
