infrastructure/k8s/06-fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-api-service
  labels:
    app: mongo-api
spec:
  selector:
    app: mongo-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
