infrastructure/k8s/06a-fastapi-service-for-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-api-service-stateful
  labels:
    app.kubernetes.io/name: fastapi-mongo
    app.kubernetes.io/instance: mongo-api-stateful
    app.kubernetes.io/part-of: mongo-loader-app
spec:
  selector:
    app.kubernetes.io/instance: mongo-api-stateful
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
