infrastructure/k8s/07-fastapi-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mongo-api-route
  labels:
    app.kubernetes.io/name: fastapi-mongo
    app.kubernetes.io/instance: mongo-api
    app.kubernetes.io/part-of: mongo-loader-app
spec:
  to:
    kind: Service
    name: mongo-api-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
